--- a/src/main/resources/templates/book/list.html
+++ b/src/main/resources/templates/book/list.html
@@ -16,8 +16,8 @@
             <th>书籍编号</th>
             <th>reader</th>
             <th>ISBN</th>
-            <th>Edit</th>
-            <th>Delete</th>
+            <!--<th>Edit</th>-->
+            <!--<th>Delete</th>-->
         </tr>
         </thead>
         <tbody>
@@ -25,15 +25,15 @@
             <th scope="row" th:text="${book.id}">1</th>
             <td th:text="${book.reader}">neo</td>
             <td th:text="${book.isbn}">Otto</td>
-            <td><a th:href="@{/toEdit(id=${book.id})}">edit</a></td>
-            <td><a th:href="@{/delete(id=${book.id})}">delete</a></td>
+            <!--<td><a th:href="@{/toEdit(id=${book.id})}">edit</a></td>-->
+            <!--<td><a th:href="@{/delete(id=${book.id})}">delete</a></td>-->
         </tr>
         </tbody>
     </table>
 </div>
 <div class="form-group">
     <div class="col-sm-2 control-label">
-        <a href="/toAdd" th:href="@{/toAdd}" class="btn btn-info">add</a>
+        <a class="btn btn-info" th:href="@{/add}">add</a>
     </div>
 </div>
 
